--- a/package.json
+++ b/package.json
@@ -23,26 +23,27 @@
         "serve": "node ./out/web/app.js"
     },
     "dependencies": {
-        "langium": "~2.0.0",
-        "vscode-languageclient": "~8.0.2",
         "chalk": "~5.3.0",
         "commander": "~10.0.0",
         "express": "~4.18.2",
+        "jayson": "^4.1.0",
+        "langium": "~2.0.0",
         "monaco-editor-workers": "~0.34.2",
-        "monaco-editor-wrapper": "~1.6.0"
+        "monaco-editor-wrapper": "~1.6.0",
+        "vscode-languageclient": "~8.0.2"
     },
     "devDependencies": {
+        "@types/express": "^4.17.17",
         "@types/node": "~16.18.11",
-        "@typescript-eslint/parser": "~5.58.0",
-        "@typescript-eslint/eslint-plugin": "~5.58.0",
-        "eslint": "~8.33.0",
-        "langium-cli": "~2.0.0",
-        "typescript": "~5.0.4",
         "@types/vscode": "~1.67.0",
+        "@typescript-eslint/eslint-plugin": "~5.58.0",
+        "@typescript-eslint/parser": "~5.58.0",
         "concurrently": "^7.6.0",
         "esbuild": "^0.18.6",
-        "@types/express": "^4.17.17",
-        "shx": "^0.3.4"
+        "eslint": "~8.33.0",
+        "langium-cli": "~2.0.0",
+        "shx": "^0.3.4",
+        "typescript": "~5.0.4"
     },
     "displayName": "scheduler",
     "engines": {
@@ -60,7 +61,9 @@
                     "Scheduler",
                     "scheduler"
                 ],
-                "extensions": [".schedule"],
+                "extensions": [
+                    ".schedule"
+                ],
                 "configuration": "./language-configuration.json"
             }
         ],
